# MaldiDeepKit

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements-uncertainty.txt  requirements.txt
.github/workflows/: ci.yml
docs/: Makefile
docs/source/: changelog.rst  conf.py  contributing.rst  index.rst  installation.rst  papers.rst  quickstart.rst  spectrum_scaling.rst
docs/source/_static/css/: custom.css
docs/source/api/: augment.rst  base.rst  blocks.rst  cnn.rst  index.rst  mlp.rst  resnet.rst  transformer.rst  uncertainty.rst  utils.rst
docs/source/tutorials/: index.rst
maldideepkit/: __init__.py  _bin_scaling.py  _blocks.py  blocks.py
maldideepkit/attention/: __init__.py  mlp.py
maldideepkit/augment/: __init__.py  mixing.py  spectra.py
maldideepkit/base/: __init__.py  classifier.py  data.py
maldideepkit/cnn/: __init__.py  cnn.py
maldideepkit/resnet/: __init__.py  resnet.py
maldideepkit/transformer/: __init__.py  transformer.py
maldideepkit/uncertainty/: __init__.py  _base.py  _result.py  conformal.py  laplace.py  mc_dropout.py
maldideepkit/utils/: __init__.py  calibration.py  ensemble.py  loss.py  lr_finder.py  reproducibility.py  sam.py  training.py
notebooks/: 01_quick_start.ipynb  02_model_comparison.ipynb  03_attention_interpretation.ipynb  04_full_pipeline.ipynb  05_uncertainty.ipynb  _demo.py
tests/: conftest.py  test_augment.py  test_base.py  test_bin_scaling.py  test_blocks.py  test_calibration.py  test_cnn.py  test_ensemble.py  test_loss.py  test_lr_finder.py  test_maldiset_integration.py  test_mlp.py  test_resnet.py  test_sam.py  test_sklearn_compat.py  test_transformer.py  test_uncertainty.py  test_warm_start.py  test_warping.py
